--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://myusername.github.io/reactTest"
+  "homepage": "https://kathrynmckean.github.io/reactTest"
 }
